@@ -1,6 +1,7 @@
 package org.example.mapper;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import org.example.entity.TrainingType;
 import org.springframework.stereotype.Component;
 
@@ -17,10 +18,10 @@ public class TrainingTypeMapper {
   }
 
   public List<String> toNames(List<TrainingType> trainingTypes){
-    return trainingTypes.stream().map(this::toName).toList();
+    return trainingTypes.stream().map(this::toName).collect(Collectors.toList());
   }
 
   public List<TrainingType> toTypes(List<String> names){
-    return names.stream().map(this::toType).toList();
+    return names.stream().map(this::toType).collect(Collectors.toList());
   }
 }
